# pyotb

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS.md  LICENSE  README.md  RELEASE_NOTES.txt  mkdocs.yml  pyproject.toml  setup.py
doc/: MISC.md  comparison_otb.md  doc_requirements.txt  extra.css  features.md  functions.md  gen_ref_pages.py  index.md  installation.md  interaction.md  managing_loggers.md  otb_versions.md  quickstart.md  summarize.md  troubleshooting.md
doc/custom_theme/: main.html
doc/examples/: nodata_mean.md  pleiades.md
doc/stylesheets/: extra.css
pyotb/: __init__.py  apps.py  core.py  depreciation.py  functions.py  helpers.py  install.py  tools.py
scripts/: replace_fstrings.py
tests/: basic_tests.py  bug_todel.py  bug_todel2.py  ndvi_test.py  numpy_array_test.py  pipeline_summary.json  pipeline_test.py  serialized_apps.json  test-core.xml  test-numpy.xml  test-pipeline.xml  test-serialization.xml  test_core.py  test_metadata.py  test_numpy.py  test_pipeline.py  test_serialization.py  test_todel.py  tests_data.py
tests/Data/Input/: QB_MUL_ROI_1000_100.tif
