[build-system]
requires = ["setuptools >= 65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyotb"
description = "Library to enable easy use of the Orfeo ToolBox (OTB) in Python"
authors = [
    { name = "Rémi Cresson", email = "remi.cresson@inrae.fr" },
    { name = "Nicolas Narçon" },
    { name = "Vincent Delbar" },
]
requires-python = ">=3.7"
keywords = ["gis", "remote sensing", "otb", "orfeotoolbox", "orfeo toolbox"]
dependencies = ["numpy>=1.16,<2"]
dynamic = ["version"]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
    "codespell",
    "pydocstyle",
    "tomli",
    "requests",
]

[project.urls]
documentation = "https://pyotb.readthedocs.io"
homepage = "https://github.com/orfeotoolbox/pyotb"
repository = "https://forgemia.inra.fr/orfeo-toolbox/pyotb"

[tool.setuptools]
packages = ["pyotb"]

[tool.setuptools.dynamic]
version = { attr = "pyotb.__version__" }

[tool.pylint]
max-line-length = 88
max-module-lines = 2000
good-names = ["x", "y", "i", "j", "k", "e"]
disable = [
    "line-too-long",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
]

[tool.pydocstyle]
convention = "google"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--color=yes --cov=pyotb --no-cov-on-fail --cov-report term"
testpaths = ["tests"]
